# investment-toolbox

./: .gitignore  LICENSE  pyproject.toml
interest/: .gitignore  parameters.cfg.example  projection.py  pyproject.toml
