[tool.poetry]
name = "investment toolbox"
version = "0.1.0"
description = ""
authors = ["Gerd Friemel <gerd.friemel@friemel-tech.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.0"
configparser = "^5.3.0"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
